- Fixed username header layout on mobile (closes #49)

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -34,5 +34,6 @@
     font-size: 8px;
     line-height: 8px;
     transform: rotate(180deg);
+    margin-left: 0.25rem;
   }
 }
